Bug 1612377 [Wayland] Remove moz_container_set_accelerated(), r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D68351